test/tests/compiler/15_arrays_and_pointer_arithmetic/invalid_types/compound_initializer_too_long_static.plx
pub fn main(none) i32 {
    data arr: [3]i32 = $(1, 2, 3, 4)
    return arr[2]
}
